--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -23,6 +23,11 @@ public class PriorityTaskList {
 		return priorityList;
 	}
 	
+	/**
+	* This operation adds a specific task to priorityList
+	*
+	* @param task to be added
+	*/
 	public void addToPL(Task t){
 		if(t.getPriority() == null){
 			p4.add(t);
@@ -35,6 +40,11 @@ public class PriorityTaskList {
 		}
 	}
 	
+	/**
+	* This operation deletes a task from PriorityTaskList
+	*
+	* @param task to be deleted
+	*/
 	public void deleteFromPL(Task t){
 	    if(t.getPriority() == null){
 	    	for (int i = 0; i<p4.size(); i++){
@@ -67,6 +77,9 @@ public class PriorityTaskList {
 		}
 	}
 	
+	/* This operation clear all the timeline
+	*
+	*/
 	public void clear(){
 		p1.clear();
 		p2.clear();
@@ -77,16 +90,18 @@ public class PriorityTaskList {
 	public ArrayList<Task> getP1() {
 		return p1;
 	}
+	
 	public ArrayList<Task> getP2() {
 		return p2;
 	}
+	
 	public ArrayList<Task> getP3() {
 		return p3;
 	}
+	
 	public ArrayList<Task> getP4() {
 		return p4;
 	}
-
 }
 ```
 ###### src\logic\Searcher.java
@@ -94,6 +109,7 @@ public class PriorityTaskList {
 public class Searcher {
 	
 	private static Searcher searcher = null;
+	
 	private Searcher(){
 	}
 	
@@ -101,9 +117,9 @@ public class Searcher {
 		if(searcher == null){
 			searcher = new Searcher();
 		}
-		return searcher;
-		
+		return searcher;	
 	}
+	
 	public ArrayList<Task> search(Task target){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(target.getStartTime() != null){
@@ -121,13 +137,12 @@ public class Searcher {
 			}
 		}else{
 			if(target.getName() != null){
-				result = searchKeyword(target.getName(), LogicClass.getTaskListForSearcher());
+				result = searchKeyword(target.getName(), LogicClass.getInstance().getTaskListForSearcher());
 			}
 		}
 		return result;
 
 	}
-	
 	public ArrayList<Task> searchKeyword(String key, ArrayList<Task> sample){
 		int i, j;
 		String[] keywords = key.split(" ");
@@ -171,13 +186,7 @@ public class Searcher {
 		}
 		return sample;		
 	}
-	/*
-	public static ArrayList<Task> searchDate(DateTime date){
-		ArrayList<Task> result = new ArrayList<Task>();
-		searchFromStart(TimeLine.getStarttimeLine(), date, result);
-		searchFromEnd(TimeLine.getEndtimeLine(), date, result);
-		return result;
-	}*/
+	
 	public ArrayList<Task> searchDate(DateTime start, DateTime end){
 		ArrayList<Task> result1 = new ArrayList<Task>(TimeLine.getInstance().getStarttimeLine());
 		ArrayList<Task> result2 = new ArrayList<Task>(TimeLine.getInstance().getEndtimeLine());
@@ -192,7 +201,6 @@ public class Searcher {
 					result1.remove(i);
 					i--;
 				}
-				
 			}
 		}
 		for(int j = 0; j < result2.size(); j++){
@@ -203,64 +211,27 @@ public class Searcher {
 		}
 		return result1;
 	}
-	/*
-	private static void searchFromStart(ArrayList<Task> timeLine, DateTime time, ArrayList<Task> result){
-		int index1 = TimeLine.findPositionStart(timeLine, time, 0, timeLine.size());
-		
-		if(index1 == 0){
-		}else{
-			index1 --;
-			int index2 = index1 + 1;
-			while((index1 >= 0)&&(timeLine.get(index1).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index1));
-				index1--;
-			}
-			while((index2 < timeLine.size())&&(timeLine.get(index2).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index2));
-				index2++;
-			}
-		}
-	}
-	
-	private static void searchFromEnd(ArrayList<Task> timeLine, DateTime time, ArrayList<Task> result){
-		int index1 = TimeLine.findPositionEnd(timeLine, time, 0, timeLine.size());
-		
-		if(index1 == 0){
-		}else{
-			index1 --;
-			int index2 = index1 + 1;
-			while((index1 >= 0)&&(timeLine.get(index1).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index1));
-				index1--;
-			}
-			while((index2 < timeLine.size())&&(timeLine.get(index2).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index2));
-				index2++;
-			}
-		}
-	}*/
-	
 }
 ```
 ###### src\logic\SystemTest.java
 ``` java
 public class SystemTest {
-
+	LogicClass lc = LogicClass.getInstance();
+	
 	@Test
 	public void test1() {
 		//test: add, update, delete
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("add meeting 9-Oct");
-		LogicClass lg = LogicClass.getInstance();
-		lg.executeCommand(cmd);
-		int size = LogicClass.getTaskList().size();
-		assertEquals(LogicClass.getTaskList().get(0).getName(), "meeting");
+		lc.executeCommand(cmd);
+		int size = lc.getTaskList().size();
+		assertEquals(lc.getTaskList().get(0).getName(), "meeting");
 		cmd = cmp.getCommandPackage("update `meeting `name `party");
-		lg.executeCommand(cmd);
-		assertEquals(LogicClass.getTaskList().get(0).getName(), "party");
+		lc.executeCommand(cmd);
+		assertEquals(lc.getTaskList().get(0).getName(), "party");
 		cmd = cmp.getCommandPackage("delete party");
-		lg.executeCommand(cmd);
-		assertEquals(LogicClass.getTaskList().size(), size - 1);
+		lc.executeCommand(cmd);
+		assertEquals(lc.getTaskList().size(), size - 1);
 	}
 	
 	@Test
@@ -268,19 +239,19 @@ public class SystemTest {
 		//test: clear, undo, redo
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("clear");
-		LogicClass lg = LogicClass.getInstance();
-		lg.executeCommand(cmd);
-		int size = LogicClass.getTaskList().size();
+
+		lc.executeCommand(cmd);
+		int size = lc.getTaskList().size();
 		assertEquals(0, size);
 		cmd = cmp.getCommandPackage("add meeting 9-Oct");
-		lg.executeCommand(cmd);
+		lc.executeCommand(cmd);
 		cmd = cmp.getCommandPackage("undo");
-		lg.executeCommand(cmd);
-		size = LogicClass.getTaskList().size();
+		lc.executeCommand(cmd);
+		size = lc.getTaskList().size();
 		assertEquals(0, size);
 		cmd = cmp.getCommandPackage("redo");
-		lg.executeCommand(cmd);
-		size = LogicClass.getTaskList().size();
+		lc.executeCommand(cmd);
+		size = lc.getTaskList().size();
 		assertEquals(1, size);
 	}
 	
@@ -289,28 +260,27 @@ public class SystemTest {
 		//test: sort, search
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("add party 8-Oct #3");
-		LogicClass lg = LogicClass.getInstance();
-		lg.executeCommand(cmd);
+		lc.executeCommand(cmd);
 		cmd = cmp.getCommandPackage("add meeting 9-Oct #2");
-		lg.executeCommand(cmd);
+		lc.executeCommand(cmd);
 		cmd = cmp.getCommandPackage("sort name");
-		lg.executeCommand(cmd);
-		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		lc.executeCommand(cmd);
+		assertEquals("meeting", lc.getTaskList().get(0).getName());
 		cmd = cmp.getCommandPackage("sort time");
-		lg.executeCommand(cmd);
-		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		lc.executeCommand(cmd);
+		assertEquals("party", lc.getTaskList().get(0).getName());
 		cmd = cmp.getCommandPackage("sort priority");
-		lg.executeCommand(cmd);
-		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		lc.executeCommand(cmd);
+		assertEquals("meeting", lc.getTaskList().get(0).getName());
 		cmd = cmp.getCommandPackage("search meeting");
-		lg.executeCommand(cmd);
-		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		lc.executeCommand(cmd);
+		assertEquals("meeting", lc.getTaskList().get(0).getName());
 		cmd = cmp.getCommandPackage("search 8-Oct");
-		lg.executeCommand(cmd);
-		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		lc.executeCommand(cmd);
+		assertEquals("party", lc.getTaskList().get(0).getName());
 		cmd = cmp.getCommandPackage("search #2");
-		lg.executeCommand(cmd);
-		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());	
+		lc.executeCommand(cmd);
+		assertEquals("meeting", lc.getTaskList().get(0).getName());	
 	}
 
 }
@@ -335,13 +305,21 @@ public class TimeLine {
 		}
 		return timeline;
 	}
+	
+	/**
+	* This operation adds the task to its respective timeLine
+	* this operation maintain the Chronological order of timeline
+	*
+	* @param task to be added
+	*/
 	public void addToTL(Task t){
+		//event task and task with only start time will be added into startTimeLine
 		if(t.getStartTime() != null){
 			DateTime time = t.getStartTime();		
 			int index = findPositionStart(startTimeLine, time, 0, startTimeLine.size());
-			startTimeLine.add(index, t);
-			
+			startTimeLine.add(index, t);			
 		}
+		//deadline task will be added to endTimeLine
 		else if(t.getEndTime() != null){
 			DateTime time = t.getEndTime();
 			int index = findPositionEnd(endTimeLine, time, 0, endTimeLine.size());
@@ -351,16 +329,19 @@ public class TimeLine {
 		}
 	}
 	
+	/**
+	* This operation find the position of the task in the startTimeline
+	*
+	* @param timeline, the time being searched, left index, right index.
+	* @return position
+	*/
 	public int findPositionStart(ArrayList<Task> timeLine, DateTime time, int left, int right){
 		if(right == 0){
 			return 0;
 		}
-		int mid = (left + right)/2;
-		
+		int mid = (left + right)/2;	
 	    if(timeLine.get(mid).getStartTime().compareTo(time) < 0){
-	    	
 	    	if(mid == left){
-	    		
 	    		return left + 1;
 	    	}else{
 	    		return findPositionStart(timeLine, time, mid, right);
@@ -376,16 +357,19 @@ public class TimeLine {
 		}
 	}
 	
+	/**
+	* This operation find the position of the task in the endTimeline
+	*
+	* @param timeline, the time being searched, left index, right index.
+	* @return position
+	*/
 	public int findPositionEnd(ArrayList<Task> timeLine, DateTime time, int left, int right){
 		if(right == 0){
 			return 0;
 		}
 		int mid = (left + right)/2;
-		
-	    if(timeLine.get(mid).getEndTime().compareTo(time) < 0){
-	    	
+	    if(timeLine.get(mid).getEndTime().compareTo(time) < 0){	
 	    	if(mid == left){
-	    		
 	    		return left + 1;
 	    	}else{
 	    		return findPositionEnd(timeLine, time, mid, right);
@@ -401,16 +385,17 @@ public class TimeLine {
 		}
 	}
 	
-	
-
-	
+	/**
+	* This operation delete the specific task in timeline
+	*
+	* @param task to be deleted
+	*/
 	public void deleteFromTL(Task t){
 		if(t.getStartTime() != null){
 			DateTime time = t.getStartTime();
 			String name = t.getName();	
 			removeStart(startTimeLine, time, name);
 		}
-		
 		else if(t.getEndTime() != null){
 			DateTime time = t.getEndTime();
 			String name = t.getName();	
@@ -419,6 +404,11 @@ public class TimeLine {
 			floatTimeLine.remove(t);
 		}
 	}
+	
+	/* This operation delete the specific task in starttimeline
+	*
+	* @param timeline, time of the task, task name
+	*/
 	public void removeStart(ArrayList<Task> timeLine, DateTime time, String name){
 		int index1 = findPositionStart(timeLine, time, 0, timeLine.size()) - 1;
 		int index2 = index1 + 1;
@@ -436,6 +426,11 @@ public class TimeLine {
 			timeLine.remove(index2);
 		}
 	}
+	
+	/* This operation delete the specific task in endtimeline
+	*
+	* @param timeline, time of the task, task name
+	*/
 	public void removeEnd(ArrayList<Task> timeLine, DateTime time, String name){
 		int index1 = findPositionEnd(timeLine, time, 0, timeLine.size()) - 1;
 		int index2 = index1 + 1;
@@ -454,6 +449,9 @@ public class TimeLine {
 		}
 	}
 	
+	/* This operation clear all the timeline
+	*
+	*/
 	public void clear(){
 		startTimeLine.clear();
 		endTimeLine.clear();
@@ -584,6 +582,7 @@ public class ReadAndWriteTest {
 	public void test() {
 		Storage storage = Storage.getInstance();
 		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
 		for(int i = 1; i < 10; i++){
 			Task t1 = new Task("test" + i);
 			t1.setStartTime(new DateTime(2016,i,1,1,1));
@@ -592,8 +591,8 @@ public class ReadAndWriteTest {
 			a.add(t1);
 		}
 		storage.read();
-		storage.write(a);
-		ArrayList<Task> b = storage.read();
+		storage.write(a,c);
+		ArrayList<Task> b = storage.read().get(0);
 		System.out.println(a);
 		System.out.println(b);
 		for(int i = 0; i < 9; i++){
@@ -614,11 +613,12 @@ public class SetPathTest {
 	public void test() {
 		
 		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
 		Task t = new Task("test");
 		a.add(t);
-		Storage.getInstance().write(a);
+		Storage.getInstance().write(a,c);
 		Storage.getInstance().setPath("Task_Bomber.txt");
-		ArrayList<Task> b = Storage.getInstance().read();
+		ArrayList<Task> b = Storage.getInstance().read().get(0);
 		System.out.println(a);
 		System.out.println(b);
 		assertEquals(b.get(0).getName(), a.get(0).getName());
@@ -646,13 +646,17 @@ public class Storage {
 			return storage;
 		}
 	}
+	
+	/**
+	* This operation open the file and start to read it
+	*
+	* @return a list contain the ongoing tasklist and 'done' tasklist.
+	*/
 
-	public ArrayList<Task> read() {
-		ArrayList<Task> taskList = new ArrayList<Task>();
+	public ArrayList<ArrayList<Task>> read() {
+		ArrayList<ArrayList<Task>> result = null;
 		try {
-			
 			filePath.createNewFile();
-
 			FileReader fr = new FileReader(filePath);
 			BufferedReader buff = new BufferedReader(fr);
 			String path = buff.readLine();
@@ -663,82 +667,78 @@ public class Storage {
 			userFile.createNewFile();
 			fr = new FileReader(userFile);
 			buff = new BufferedReader(fr);
-			String content;
-
-			// read in original content in the file
-			//System.out.println("Reading file.");
-			while ((content = buff.readLine()) != null) {
-
-				String[] taskInfo = content.split("\\|");
-				Task taskToRead = new Task(taskInfo[0]);
-
-				if (taskInfo[1].equals(" ")) {
-					taskToRead.setStartTime(null);
-				} else {
-					taskToRead.setStartTime(ISODateTimeFormat.dateTime().parseDateTime(taskInfo[1]));
-				}
-
-				if (taskInfo[2].equals(" ")) {
-					taskToRead.setEndTime(null);
-				} else {
-					taskToRead.setEndTime(ISODateTimeFormat.dateTime().parseDateTime(taskInfo[2]));
-				}
-				
-				if(taskInfo[3].equals("null")){
-					//System.out.println("taskInfo 3 is null");
-					taskInfo[3] = null;
-				}
-
-				//System.out.println("priority in storage: " + taskInfo[3]);
-
-				if (taskInfo[3] != null && taskInfo[3] != "") {
-					taskToRead.setPriority(taskInfo[3]);
-				}
-				taskList.add(taskToRead);
-			}
+			result = readInTask(buff);
 			buff.close();
 			fr.close();
-
 		} catch (IOException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		return taskList;
+		
+		return result;
 	}
 
-	public void write(ArrayList<Task> taskList) {
+	/**
+	* This operation read all the task from local file
+	*
+	* @return a list contain the ongoing tasklist and 'done' tasklist.
+	*/
+	
+	private ArrayList<ArrayList<Task>> readInTask(BufferedReader buff) throws IOException {
+		String content;
+		boolean done = false;
+		ArrayList<Task> taskList = new ArrayList<Task>();
+		ArrayList<Task> doneList = new ArrayList<Task>();
+		while ((content = buff.readLine()) != null) {
+		    if(content.equals("done:")){
+		    	done = true;
+		    	continue;
+		    }
+			String[] taskInfo = content.split("\\|");
+			Task taskToRead = new Task(taskInfo[0]);
+			if (taskInfo[1].equals(" ")) {
+				taskToRead.setStartTime(null);
+			} else {
+				taskToRead.setStartTime(ISODateTimeFormat.dateTime().parseDateTime(taskInfo[1]));
+			}
+			if (taskInfo[2].equals(" ")) {
+				taskToRead.setEndTime(null);
+			} else {
+				taskToRead.setEndTime(ISODateTimeFormat.dateTime().parseDateTime(taskInfo[2]));
+			}
+			if(taskInfo[3].equals("null")){
+				//System.out.println("taskInfo 3 is null");
+				taskInfo[3] = null;
+			}
+			if (taskInfo[3] != null && taskInfo[3] != "") {
+				taskToRead.setPriority(taskInfo[3]);
+			}
+			if(done == false){
+				taskList.add(taskToRead);
+			}else{
+				doneList.add(taskToRead);
+			}
+		}
+		ArrayList<ArrayList<Task>> result = new ArrayList<ArrayList<Task>>();
+		result.add(taskList);
+		result.add(doneList);
+		return result;
+	}
+
+	/**
+	* This operation open the file and start to write into it
+	*
+	* @param ongoing tasklist and 'done' tasklist.
+	*/
+	public void write(ArrayList<Task> taskList, ArrayList<Task> doneList) {
 		try {
 			FileWriter fw = new FileWriter(userFile, false);
 			BufferedWriter buff = new BufferedWriter(fw);
-			Task taskToWrite;
 			String content = "";
-			for (int i = 0; i < taskList.size(); i++) {
-				taskToWrite = taskList.get(i);
-
-				content += taskToWrite.getName();
-				content += "|";
-
-				if (taskToWrite.getStartTime() == null) {
-					content += " ";
-				} else {
-					content += taskToWrite.getStartTime().toString();
-				}
-				content += "|";
-
-				if (taskToWrite.getEndTime() == null) {
-					content += " ";
-				} else {
-					content += taskToWrite.getEndTime().toString();
-				}
-				content += "|";
-
-				content += taskToWrite.getPriority();
-				if (i != (taskList.size() - 1)) {
-					content += "\n";
-				}
-				// System.out.println("Writing into file.");
-
-			}
+			content = writeTasks(taskList, content);
+			content += "done:";
+			content += "\n";
+			content = writeTasks(doneList, content);
 			buff.write(content);
 			buff.close();
 			fw.close();
@@ -748,14 +748,50 @@ public class Storage {
 		}
 	}
 	
+	/**
+	* This operation open the file and start to write into it
+	*
+	* @param a list of tasks to be written and previous content
+	*/
+	private String writeTasks(ArrayList<Task> taskList, String content) {
+		Task taskToWrite;
+		for (int i = 0; i < taskList.size(); i++) {
+			taskToWrite = taskList.get(i);
+			content += taskToWrite.getName();
+			content += "|";
+			if (taskToWrite.getStartTime() == null) {
+				content += " ";
+			} else {
+				content += taskToWrite.getStartTime().toString();
+			}
+			content += "|";
+			if (taskToWrite.getEndTime() == null) {
+				content += " ";
+			} else {
+				content += taskToWrite.getEndTime().toString();
+			}
+			content += "|";
+			content += taskToWrite.getPriority();
+			content += "\n";
+			// System.out.println("Writing into file.");
+		}
+		return content;
+	}
+	
+	/**
+	* This operation set the path of storage file to the specific path
+	*
+	* @param file path
+	* @return a boolean value which implies the success of operation
+	*/
 	public Boolean setPath(String path){
 		try{
 			File newPath = new File(path);
 			newPath.createNewFile();
-			ArrayList<Task> content = read();
+			ArrayList<ArrayList<Task>> content = read();
 			userFile.delete();
 			userFile = newPath;
-			write(content);
+			write(content.get(0), content.get(1));
 			FileWriter fw = new FileWriter(filePath, false);
 			BufferedWriter buff = new BufferedWriter(fw);
 			buff.write(path);
