--- a/collated/A0122061B.md
+++ b/collated/A0122061B.md
@@ -37,17 +37,17 @@ public class CommandPackage {
 	updateSequence = new ArrayList<String>();
     }
 
-    public String setCommand(String cmd) {
+    protected String setCommand(String cmd) {
 	command = cmd;
 	return command;
     }
 
-    public String setPhrase(String text) {
+    protected String setPhrase(String text) {
 	phrase = text;
 	return phrase;
     }
 
-    public DatePackage setDates(ArrayList<DateTime> time, String condition) {
+    protected DatePackage setDates(ArrayList<DateTime> time, String condition) {
 	if (condition.equalsIgnoreCase("start")) {
 	    dates.setDate(time.get(0), null);
 	} else {
@@ -57,7 +57,7 @@ public class CommandPackage {
 
     }
 
-    public DatePackage setDates(ArrayList<DateTime> time) {
+    protected DatePackage setDates(ArrayList<DateTime> time) {
 	if (time.get(0).compareTo(time.get(1)) < 0) {
 	    dates.setDate(time.get(0), time.get(1));
 	} else {
@@ -66,12 +66,12 @@ public class CommandPackage {
 	return dates;
     }
 
-    public String setPriority(String priority) {
+    protected String setPriority(String priority) {
 	this.priority = priority;
 	return priority;
     }
 
-    public ArrayList<String> addUpdateSequence(String sequence) {
+    protected ArrayList<String> addUpdateSequence(String sequence) {
 	updateSequence.add(sequence);
 	return updateSequence;
 
@@ -122,7 +122,11 @@ public class CommandParser {
     private String START_TIME_SHORT = "`st";
     private String END_TIME_LONG = "`endTime";
     private String END_TIME_SHORT = "`et";
-
+    private DateParser parserForDate = new DateParser();
+    private TimeParser parserForTime = new TimeParser();
+    private ActionLibrary libraryForAction = new ActionLibrary();
+    private TimeLibrary libraryForTime = new TimeLibrary();
+    
     public CommandParser() {
 
     }
@@ -177,7 +181,7 @@ public class CommandParser {
 	    String sample;
 	    for (int i = 0; i < inputArr.size(); i++) {
 		sample = inputArr.get(i);
-		if (TimeParser.isValidSearchFormat(sample) || DateParser.isDate(sample)) {
+		if (parserForTime.isValidSearchFormat(sample) || parserForDate.isDate(sample)) {
 		    inputData.setDates(extractSearchDate());
 		}
 	    }
@@ -193,7 +197,7 @@ public class CommandParser {
      * private int searchDates() { int numberOfDates = countDate(); int
      * numberOfTime = countTime(); if (numberOfDates == 1) { ArrayList<DateTime>
      * dateArr = extractSearchDate(); } if (numberOfTime == 1) {
-     * TimeParser.searchTime();
+     * parserForTime.searchTime();
      * 
      * }
      * 
@@ -265,10 +269,10 @@ public class CommandParser {
 		dateArr = extractTime(dateArr);
 		System.out.println(dateArr.size() + "<<<");
 		for (int i = 0; i < inputArr.size(); i++) {
-		    if (TimeLibrary.isStart(inputArr.get(i))) {
+		    if (libraryForTime.isStart(inputArr.get(i))) {
 			inputData.setDates(dateArr, "start");
 			inputArr.remove(i);
-		    } else if (TimeLibrary.isEnd(inputArr.get(i))) {
+		    } else if (libraryForTime.isEnd(inputArr.get(i))) {
 			inputData.setDates(dateArr, "end");
 			inputArr.remove(i);
 		    } else {
@@ -283,10 +287,10 @@ public class CommandParser {
 		dateArr = extractTime();
 		for (int i = 0; i < inputArr.size(); i++) {
 		    System.out.println("date is  " + dateArr.get(0));
-		    if (TimeLibrary.isStart(inputArr.get(i))) {
+		    if (libraryForTime.isStart(inputArr.get(i))) {
 			inputData.setDates(dateArr, "start");
 			inputArr.remove(i);
-		    } else if (TimeLibrary.isEnd(inputArr.get(i))) {
+		    } else if (libraryForTime.isEnd(inputArr.get(i))) {
 			inputData.setDates(dateArr, "end");
 			inputArr.remove(i);
 		    } else {
@@ -328,12 +332,12 @@ public class CommandParser {
 	String date;
 	for (int i = 0; i < inputArr.size(); i++) {
 	    System.out.println("searching index " + i);
-	    if (DateParser.isDate(inputArr.get(i))) {
+	    if (parserForDate.isDate(inputArr.get(i))) {
 		date = inputArr.remove(i);
-		return DateParser.searchDate(date);
-	    } else if (TimeParser.isValidSearchFormat(inputArr.get(i))) {
+		return parserForDate.searchDate(date);
+	    } else if (parserForTime.isValidSearchFormat(inputArr.get(i))) {
 		date = inputArr.remove(i);
-		return TimeParser.searchTime(date);
+		return parserForTime.searchTime(date);
 	    }
 	}
 	return null;
@@ -349,11 +353,11 @@ public class CommandParser {
 	    if (test.contains("`")) {
 		test = test.substring(1);
 	    }
-	    if (DateParser.isDate(test)) {
+	    if (parserForDate.isDate(test)) {
 		String date = test;
 		index.add(i);
 		System.out.println("DATE IS " + date);
-		dateArr.add(DateParser.setDate(date));
+		dateArr.add(parserForDate.setDate(date));
 	    }
 	}
 	for (int i = index.size() - 1; 0 <= i; i--) {
@@ -374,14 +378,14 @@ public class CommandParser {
 	ArrayList<Integer> index = new ArrayList<Integer>();
 	for (int i = 0; i < inputArr.size(); i++) {
 	    System.out.println(i + ". TESTING IS " + inputArr.get(i));
-	    if (TimeParser.isTime(inputArr.get(i))) {
+	    if (parserForTime.isTime(inputArr.get(i))) {
 		System.out.println("TIME IS " + inputArr.get(i));
 		String time = inputArr.get(i);
 		DateTime oldDate = dateArr.get(count);
 		System.out.println("TIME IS " + time);
 		System.out.println("DATE IS  " + oldDate);
 		index.add(i);
-		DateTime newDate = TimeParser.setTime(oldDate, time);
+		DateTime newDate = parserForTime.setTime(oldDate, time);
 		System.out.println("NEW DATE IS  " + newDate);
 		newDateArr.add(newDate);
 		count++;
@@ -400,10 +404,10 @@ public class CommandParser {
 	ArrayList<Integer> index = new ArrayList<Integer>();
 	int count = 0;
 	for (int i = 0; i < inputArr.size(); i++) {
-	    if (TimeParser.isTime(inputArr.get(i))) {
+	    if (parserForTime.isTime(inputArr.get(i))) {
 		String time = inputArr.get(i);
 		index.add(i);
-		dateArr.add(TimeParser.setTime(null, time));
+		dateArr.add(parserForTime.setTime(null, time));
 		count++;
 	    }
 	}
@@ -418,7 +422,7 @@ public class CommandParser {
     private int countDate() {
 	int count = 0;
 	for (int i = 0; i < inputArr.size(); i++) {
-	    if (DateParser.isDate(inputArr.get(i))) {
+	    if (parserForDate.isDate(inputArr.get(i))) {
 		count++;
 	    }
 	}
@@ -428,7 +432,7 @@ public class CommandParser {
     private int countTime() {
 	int count = 0;
 	for (int i = 0; i < inputArr.size(); i++) {
-	    if (TimeParser.isTime(inputArr.get(i))) {
+	    if (parserForTime.isTime(inputArr.get(i))) {
 		count++;
 	    }
 	}
@@ -469,7 +473,7 @@ public class CommandParser {
     }
 
     private String callAction(String string) {
-	String result = ActionLibrary.find(string);
+	String result = libraryForAction.find(string);
 	return result;
     }
 
@@ -517,8 +521,8 @@ public class CommandParserDemo {
 		CommandParser cmd = new CommandParser();
 		CommandPackage CPK;
 		System.out.println(cmd.getCommandPackage("").endingTime());
-		CPK = cmd.getCommandPackage("`u `asd `startTime ` 10-oct");
-		System.out.println("Phrase is " + CPK.getDate().toString());
+		CPK = cmd.getCommandPackage("add 123");
+		System.out.println("Phrase is " + CPK.getPhrase());
 		System.out.println();
 		System.out.println(cmd.getCommandPackage("").getPhrase().equals(""));
 		CPK = cmd.getCommandPackage("plus something 10-oct");
@@ -545,151 +549,151 @@ public class CommandParserDemo {
 
 public class DateParser {
 
-    /*
-     * ====================================================================
-     * Magic Constants
-     * ====================================================================
-     */
+  /*
+   * ====================================================================
+   * Magic Constants
+   * ====================================================================
+   */
 
-    // format 0 : full date, with year
-    private static final String DATE_FORMAT_0 = "dd/MM/YYYY";
-    private static final String DATE_FORMAT_1 = "dd-MM-YYYY";
-    private static final String DATE_FORMAT_2 = "dd.MM.YYYY";
-    private static final String DATE_FORMAT_3 = "dd/MMM/YYYY";
-    private static final String DATE_FORMAT_4 = "dd-MMM-YYYY";
-    private static final String DATE_FORMAT_5 = "dd.MMM.YYYY";
+  // format 0 : full date, with year
+  private final String DATE_FORMAT_0 = "dd/MM/YYYY";
+  private final String DATE_FORMAT_1 = "dd-MM-YYYY";
+  private final String DATE_FORMAT_2 = "dd.MM.YYYY";
+  private final String DATE_FORMAT_3 = "dd/MMM/YYYY";
+  private final String DATE_FORMAT_4 = "dd-MMM-YYYY";
+  private final String DATE_FORMAT_5 = "dd.MMM.YYYY";
 
-    // format 1 : with day and month only
-    private static final String DATE_FORMAT_6 = "dd/MM";
-    private static final String DATE_FORMAT_7 = "dd-MM";
-    private static final String DATE_FORMAT_8 = "dd/MMM";
-    private static final String DATE_FORMAT_9 = "dd-MMM";
-    private static final String DATE_FORMAT_10 = "dd.MMM";
+  // format 1 : with day and month only
+  private final String DATE_FORMAT_6 = "dd/MM";
+  private final String DATE_FORMAT_7 = "dd-MM";
+  private final String DATE_FORMAT_8 = "dd/MMM";
+  private final String DATE_FORMAT_9 = "dd-MMM";
+  private final String DATE_FORMAT_10 = "dd.MMM";
 
-    // format 2 : day of the week, Friday, etc.
-    private static final String DATE_FORMAT_11 = "E";
+  // format 2 : day of the week, Friday, etc.
+  private final String DATE_FORMAT_11 = "E";
 
-    // format 3 : just day, month, year mutually exclusively
-    private static final String DATE_FORMAT_12 = "dd/";
-    private static final String DATE_FORMAT_13 = "dd-";
-    private static final String DATE_FORMAT_14 = "dd.";
-    private static final String DATE_FORMAT_15 = "MMM";
-    private static final String DATE_FORMAT_16 = "/MM/";
-    private static final String DATE_FORMAT_17 = "-MM-";
-    private static final String DATE_FORMAT_18 = ".MM.";
-    private static final String DATE_FORMAT_19 = "YYYY";
+  // format 3 : just day, month, year mutually exclusively
+  private final String DATE_FORMAT_12 = "dd/";
+  private final String DATE_FORMAT_13 = "dd-";
+  private final String DATE_FORMAT_14 = "dd.";
+  private final String DATE_FORMAT_15 = "MMM";
+  private final String DATE_FORMAT_16 = "/MM/";
+  private final String DATE_FORMAT_17 = "-MM-";
+  private final String DATE_FORMAT_18 = ".MM.";
+  private final String DATE_FORMAT_19 = "YYYY";
 
-    // format 4 : Referral days with respect to current date
-    private static final String DATE_TODAY = "today";
-    private static final String DATE_TOMORROW = "tomorrow";
-    private static final String DATE_TMRW = "tmrw";
-    private static final String DATE_TMR = "tmr";
-    private static final String DATE_YESTERDAY = "yesterday";
+  // format 4 : Referral days with respect to current date
+  private final String DATE_TODAY = "today";
+  private final String DATE_TOMORROW = "tomorrow";
+  private final String DATE_TMRW = "tmrw";
+  private final String DATE_TMR = "tmr";
+  private final String DATE_YESTERDAY = "yesterday";
 
-    
-    //Indexes for ArrayList<DateTimeFormatter> dateFormats
-    private static final int FORMAT_TYPE_0_INDEX = 6;
-    private static final int FORMAT_TYPE_1_INDEX = 11;
-    private static final int FORMAT_TYPE_2_INDEX = 12;
-    private static final int FORMAT_TYPE_3_INDEX = 20;
+  
+  //Indexes for ArrayList<DateTimeFormatter> dateFormats
+  private final int FORMAT_TYPE_0_INDEX = 6;
+  private final int FORMAT_TYPE_1_INDEX = 11;
+  private final int FORMAT_TYPE_2_INDEX = 12;
+  private final int FORMAT_TYPE_3_INDEX = 20;
 
-    private static ArrayList<DateTimeFormatter> dateFormats = new ArrayList<DateTimeFormatter>(
-	    Arrays.asList(DateTimeFormat.forPattern(DATE_FORMAT_0), DateTimeFormat.forPattern(DATE_FORMAT_1),
-		    DateTimeFormat.forPattern(DATE_FORMAT_2), DateTimeFormat.forPattern(DATE_FORMAT_3),
-		    DateTimeFormat.forPattern(DATE_FORMAT_4), DateTimeFormat.forPattern(DATE_FORMAT_5),
-		    DateTimeFormat.forPattern(DATE_FORMAT_6), DateTimeFormat.forPattern(DATE_FORMAT_7),
-		    DateTimeFormat.forPattern(DATE_FORMAT_8), DateTimeFormat.forPattern(DATE_FORMAT_9),
-		    DateTimeFormat.forPattern(DATE_FORMAT_10), DateTimeFormat.forPattern(DATE_FORMAT_11),
-		    DateTimeFormat.forPattern(DATE_FORMAT_12), DateTimeFormat.forPattern(DATE_FORMAT_13),
-		    DateTimeFormat.forPattern(DATE_FORMAT_14), DateTimeFormat.forPattern(DATE_FORMAT_15),
-		    DateTimeFormat.forPattern(DATE_FORMAT_15), DateTimeFormat.forPattern(DATE_FORMAT_16),
-		    DateTimeFormat.forPattern(DATE_FORMAT_17), DateTimeFormat.forPattern(DATE_FORMAT_18),
-		    DateTimeFormat.forPattern(DATE_FORMAT_19)));
+  private ArrayList<DateTimeFormatter> dateFormats = new ArrayList<DateTimeFormatter>(
+	  Arrays.asList(DateTimeFormat.forPattern(DATE_FORMAT_0), DateTimeFormat.forPattern(DATE_FORMAT_1),
+		  DateTimeFormat.forPattern(DATE_FORMAT_2), DateTimeFormat.forPattern(DATE_FORMAT_3),
+		  DateTimeFormat.forPattern(DATE_FORMAT_4), DateTimeFormat.forPattern(DATE_FORMAT_5),
+		  DateTimeFormat.forPattern(DATE_FORMAT_6), DateTimeFormat.forPattern(DATE_FORMAT_7),
+		  DateTimeFormat.forPattern(DATE_FORMAT_8), DateTimeFormat.forPattern(DATE_FORMAT_9),
+		  DateTimeFormat.forPattern(DATE_FORMAT_10), DateTimeFormat.forPattern(DATE_FORMAT_11),
+		  DateTimeFormat.forPattern(DATE_FORMAT_12), DateTimeFormat.forPattern(DATE_FORMAT_13),
+		  DateTimeFormat.forPattern(DATE_FORMAT_14), DateTimeFormat.forPattern(DATE_FORMAT_15),
+		  DateTimeFormat.forPattern(DATE_FORMAT_15), DateTimeFormat.forPattern(DATE_FORMAT_16),
+		  DateTimeFormat.forPattern(DATE_FORMAT_17), DateTimeFormat.forPattern(DATE_FORMAT_18),
+		  DateTimeFormat.forPattern(DATE_FORMAT_19)));
 
-    protected static DateTime setDate(String input) {
+  protected DateTime setDate(String input) {
 	int formatType = getDateFormatType(input);
 	DateTime date = new DateTime();
 
 	if (formatType == 0) {
-	    date = parseDateFormat0(input);
+	  date = parseDateFormat0(input);
 	} else if (formatType == 1) {
-	    date = parseDateFormat1(input, date);
+	  date = parseDateFormat1(input, date);
 	} else if (formatType == 2) {
-	    date = parseDateFormat2(input, date);
+	  date = parseDateFormat2(input, date);
 	} else if (formatType == 4) {
-	    date = parseDateFormat4(input);
+	  date = parseDateFormat4(input);
 	}
 
 	return date;
-    }
+  }
 
-    protected static DateTime setDate() {
+  protected DateTime setDate() {
 	return new DateTime();
-    }
+  }
 
-    protected static int getDateFormatType(String input) {
+  protected int getDateFormatType(String input) {
 	DateTime date;
 	int i = 0;
 	for (; i < dateFormats.size(); i++) {
-	    try {
+	  try {
 		date = dateFormats.get(i).parseDateTime(input);
 		break;
-	    } catch (IllegalArgumentException e) {
+	  } catch (IllegalArgumentException e) {
 		continue;
-	    }
+	  }
 	}
 
 	if (i < FORMAT_TYPE_0_INDEX) {
-	    return 0;
+	  return 0;
 	} else if (i < FORMAT_TYPE_1_INDEX) {
-	    return 1;
+	  return 1;
 	} else if (i < FORMAT_TYPE_2_INDEX) {
-	    return 2;
+	  return 2;
 	} else if (i < FORMAT_TYPE_3_INDEX) {
-	    return i;
+	  return i;
 	} else if (isFormat4(input)) {
-	    return 4;
+	  return 4;
 	}
 
 	return -1;
-    }
+  }
 
-    private static boolean isFormat4(String input) {
+  private boolean isFormat4(String input) {
 	return input.equalsIgnoreCase(DATE_TODAY) || input.equalsIgnoreCase(DATE_TOMORROW)
 		|| input.equalsIgnoreCase(DATE_YESTERDAY) || input.equalsIgnoreCase(DATE_TMRW)
 		|| input.equalsIgnoreCase(DATE_TMR);
-    }
+  }
 
-    protected static boolean isDate(String input) {
+  protected boolean isDate(String input) {
 	int formatType = getDateFormatType(input);
 	assert (formatType >= -1 && (formatType <= 4 || (12 <= formatType && formatType <= 19)));
 
 	if (formatType == -1) {
-	    return false;
+	  return false;
 	} else {
-	    return true;
+	  return true;
 	}
-    }
+  }
 
-    protected static boolean isSameDate(DateTime date1, DateTime date2) {
+  protected boolean isSameDate(DateTime date1, DateTime date2) {
 	return (date1.getYear() == date2.getYear()) && (date1.getDayOfYear() == date2.getDayOfYear());
-    }
+  }
 
-    private static DateTime parseDateFormat0(String input) {
+  private DateTime parseDateFormat0(String input) {
 	DateTime date = null;
 
 	for (int i = 0; i < FORMAT_TYPE_0_INDEX; i++) {
-	    try {
+	  try {
 		date = dateFormats.get(i).parseDateTime(input);
-	    } catch (IllegalArgumentException e) {
+	  } catch (IllegalArgumentException e) {
 		continue;
-	    }
+	  }
 	}
 
 	return date;
-    }
+  }
 
-    private static DateTime parseDateFormat1(String input, DateTime date) {
+  private DateTime parseDateFormat1(String input, DateTime date) {
 	int[] dateTokens = splitDayMonth(input);
 	int targetDay = dateTokens[0];
 	int targetMonth = dateTokens[1];
@@ -697,128 +701,128 @@ public class DateParser {
 	int currentMonth = date.getMonthOfYear();
 
 	if (targetMonth < currentMonth || (targetMonth == currentMonth && targetDay < currentDay)) {
-	    date = new DateTime(date.getYear() + 1, targetMonth, targetDay, 0, 0);
+	  date = new DateTime(date.getYear() + 1, targetMonth, targetDay, 0, 0);
 	} else {
-	    date = new DateTime(date.getYear(), targetMonth, targetDay, 0, 0);
+	  date = new DateTime(date.getYear(), targetMonth, targetDay, 0, 0);
 	}
 	return date;
-    }
+  }
 
-    private static DateTime parseDateFormat2(String input, DateTime date) {
+  private DateTime parseDateFormat2(String input, DateTime date) {
 	DateTime tempDate = dateFormats.get(FORMAT_TYPE_2_INDEX - 1).parseDateTime(input);
 	int targetDayOfWeek = tempDate.getDayOfWeek();
 	int currentDayOfWeek = date.getDayOfWeek();
 
 	if (targetDayOfWeek < currentDayOfWeek) {
-	    date = date.plusWeeks(1);
+	  date = date.plusWeeks(1);
 	}
 
 	date = date.withDayOfWeek(targetDayOfWeek);
 	return date;
-    }
+  }
 
-    private static DateTime parseDateFormat4(String input) {
+  private DateTime parseDateFormat4(String input) {
 	DateTime today = new DateTime();
 
 	if (input.equalsIgnoreCase(DATE_YESTERDAY)) {
-	    return today.minusDays(1);
+	  return today.minusDays(1);
 	} else if (input.equalsIgnoreCase(DATE_TOMORROW) || (input.equalsIgnoreCase(DATE_TMRW))
 		|| (input.equalsIgnoreCase(DATE_TMR))) {
-	    return today.plusDays(1);
+	  return today.plusDays(1);
 	}
 
 	return today;
-    }
+  }
 
-    private static DateTime parseDateFormat5(String input, DateTime date) {
+  private DateTime parseDateFormat5(String input, DateTime date) {
 	int[] dateTokens = splitDayMonth(input);
 	int targetDay = dateTokens[0];
 	int currentDay = date.getDayOfMonth();
 	int currentMonth = date.getMonthOfYear();
 
 	if (targetDay < currentDay) {
-	    date = new DateTime(date.getYear(), currentMonth + 1, targetDay, 0, 0);
+	  date = new DateTime(date.getYear(), currentMonth + 1, targetDay, 0, 0);
 	} else {
-	    date = new DateTime(date.getYear(), currentMonth, targetDay, 0, 0);
+	  date = new DateTime(date.getYear(), currentMonth, targetDay, 0, 0);
 	}
 	return date;
-    }
+  }
 
-    private static DateTime parseDateFormat6(String input, DateTime date) {
+  private DateTime parseDateFormat6(String input, DateTime date) {
 	int[] dateTokens = splitDayMonth(input);
 	int targetMonth = dateTokens[0];
 	int currentMonth = date.getMonthOfYear();
 
 	if (targetMonth < currentMonth) {
-	    date = new DateTime(date.getYear() + 1, targetMonth, 0, 0, 0);
+	  date = new DateTime(date.getYear() + 1, targetMonth, 0, 0, 0);
 	} else {
-	    date = new DateTime(date.getYear(), targetMonth, 0, 0, 0);
+	  date = new DateTime(date.getYear(), targetMonth, 0, 0, 0);
 	}
 	return date;
-    }
+  }
 
-    private static DateTime parseDateFormat7(String input, DateTime date) {
+  private DateTime parseDateFormat7(String input, DateTime date) {
 	int year = Integer.parseInt(input);
 	date = new DateTime(year, 0, 0, 0, 0);
 	return date;
-    }
+  }
 
-    private static int[] splitDayMonth(String date) {
+  private int[] splitDayMonth(String date) {
 	String[] tokens = new String[2];
 	if (date.contains("/")) {
-	    tokens = date.split("/");
+	  tokens = date.split("/");
 	} else if (date.contains("-")) {
-	    tokens = date.split("-");
+	  tokens = date.split("-");
 	}
 
 	// System.out.println(tokens.length);
 	int[] intTokens = new int[tokens.length];
 	for (int i = 0; i < tokens.length; i++) {
-	    try {
+	  try {
 		intTokens[i] = Integer.parseInt(tokens[i]);
-	    } catch (NumberFormatException e) {
+	  } catch (NumberFormatException e) {
 		DateTime tempDate = DateTimeFormat.forPattern("MMM").parseDateTime(tokens[i]);
 		intTokens[i] = tempDate.getMonthOfYear();
-	    }
+	  }
 	}
 
 	return intTokens;
-    }
+  }
 
-    protected static ArrayList<DateTime> searchDate(String input) {
+  protected ArrayList<DateTime> searchDate(String input) {
 	ArrayList<DateTime> searchArea = new ArrayList<DateTime>();
 	int formatType = getDateFormatType(input);
 	DateTime date = new DateTime();
 	if (formatType == 0 || formatType == 1 || formatType == 2 || formatType == 4) {
-	    if (formatType == 0) {
+	  if (formatType == 0) {
 		date = parseDateFormat0(input);
-	    } else if (formatType == 1) {
+	  } else if (formatType == 1) {
 		date = parseDateFormat1(input, date);
-	    } else if (formatType == 2) {
+	  } else if (formatType == 2) {
 		date = parseDateFormat2(input, date);
-	    } else if (formatType == 4) {
+	  } else if (formatType == 4) {
 		date = parseDateFormat4(input);
-	    }
+	  }
 
-	    searchArea.add(date.withTime(0, 0, 0, 0));
-	    searchArea.add(date.withTime(23, 59, 59, 999));
+	  searchArea.add(date.withTime(0, 0, 0, 0));
+	  searchArea.add(date.withTime(23, 59, 59, 999));
 	} else {
-	    if (formatType < 15) { // only date given
+	  if (formatType < 15) { // only date given
 		date = parseDateFormat5(input, date);
 		searchArea.add(date.withTime(0, 0, 0, 0));
 		searchArea.add(date.withTime(23, 59, 59, 999));
-	    } else if (formatType < 19) {// only month is given
+	  } else if (formatType < 19) {// only month is given
 		date = parseDateFormat6(input, date);
 		searchArea.add(date);
 		searchArea.add(date.plusMonths(1).plusMillis(-1));
-	    } else if (formatType == 19) {
+	  } else if (formatType == 19) {
 		date = parseDateFormat7(input, date);
 		searchArea.add(date);
 		searchArea.add(date.plusYears(1).plusMillis(-1));
-	    }
+	  }
 	}
 	return searchArea;
-    }
+  }
 
 
 
@@ -829,26 +833,26 @@ public class DateParser {
 
 
 public class TimeParser {
-	private static final String TIME_FORMAT_0 = "HH:mm";
-	private static final String TIME_FORMAT_1 = "HH.mm";
-	private static final String TIME_FORMAT_2 = "HHmm";
-	private static final String TIME_FORMAT_3 = "hh:mmaa";
-	private static final String TIME_FORMAT_4 = "hh.mmaa";
-	private static final String TIME_FORMAT_5 = "hhmmaa";
-	private static final String TIME_FORMAT_6 = "hhaa";
-	private static final String TIME_FORMAT_7 = "haa";
-	private static final String TIME_FORMAT_8 = "HH:";
-	private static final String TIME_FORMAT_9 = "HH.";
-	private static final int FORMAT_SIZE = 10;
+	private final String TIME_FORMAT_0 = "HH:mm";
+	private final String TIME_FORMAT_1 = "HH.mm";
+	private final String TIME_FORMAT_2 = "HHmm";
+	private final String TIME_FORMAT_3 = "hh:mmaa";
+	private final String TIME_FORMAT_4 = "hh.mmaa";
+	private final String TIME_FORMAT_5 = "hhmmaa";
+	private final String TIME_FORMAT_6 = "hhaa";
+	private final String TIME_FORMAT_7 = "haa";
+	private final String TIME_FORMAT_8 = "HH:";
+	private final String TIME_FORMAT_9 = "HH.";
+	private final int FORMAT_SIZE = 10;
 
-	private static ArrayList<DateTimeFormatter> timeFormats = new ArrayList<DateTimeFormatter>(
+	private ArrayList<DateTimeFormatter> timeFormats = new ArrayList<DateTimeFormatter>(
 			Arrays.asList(DateTimeFormat.forPattern(TIME_FORMAT_0), DateTimeFormat.forPattern(TIME_FORMAT_1),
 					DateTimeFormat.forPattern(TIME_FORMAT_2), DateTimeFormat.forPattern(TIME_FORMAT_3),
 					DateTimeFormat.forPattern(TIME_FORMAT_4), DateTimeFormat.forPattern(TIME_FORMAT_5),
 					DateTimeFormat.forPattern(TIME_FORMAT_6), DateTimeFormat.forPattern(TIME_FORMAT_7),
 					DateTimeFormat.forPattern(TIME_FORMAT_8), DateTimeFormat.forPattern(TIME_FORMAT_9)));
 
-	protected static DateTime setTime(DateTime date, String input) {
+	protected DateTime setTime(DateTime date, String input) {
 		if (isValidFormat(input)) {
 			date = parseTimeFormat(date, input);
 			return date;
@@ -857,7 +861,7 @@ public class TimeParser {
 		}
 	}
 
-	private static boolean isValidFormat(String input) {
+	private boolean isValidFormat(String input) {
 		DateTime date;
 		int i = 0;
 		for (; i < timeFormats.size(); i++) {
@@ -872,13 +876,16 @@ public class TimeParser {
 		}
 
 		if (i < FORMAT_SIZE) {
+		    if (i == 2 && input.length() == 3) {
+			return false;
+		    }
 			return true;
 		} else {
 			return false;
 		}
 	}
 
-	protected static boolean isValidSearchFormat(String input) {
+	protected boolean isValidSearchFormat(String input) {
 		DateTime date;
 		int i = 6;
 		for (; i < timeFormats.size(); i++) {
@@ -899,7 +906,7 @@ public class TimeParser {
 		}
 	}
 
-	protected static ArrayList<DateTime> searchTime(String input) {
+	protected ArrayList<DateTime> searchTime(String input) {
 		DateTime currentTime = new DateTime();
 		DateTime time = new DateTime();;
 		ArrayList<DateTime> searchArea = new ArrayList<DateTime>();
@@ -924,7 +931,7 @@ public class TimeParser {
 		return searchArea;
 	}
 
-	protected static int getTimeFormat(String input) {
+	protected int getTimeFormat(String input) {
 		DateTime date;
 		int i = 0;
 		for (; i < timeFormats.size(); i++) {
@@ -947,15 +954,15 @@ public class TimeParser {
 		}
 	}
 
-	protected static boolean getTimeFormatArr(String input) {
+	protected boolean getTimeFormatArr(String input) {
 		return true;
 	}
 
-	protected static boolean isTime(String input) {
+	protected boolean isTime(String input) {
 		return isValidFormat(input);
 	}
 
-	private static DateTime parseTimeFormat(DateTime date, String input) {
+	private DateTime parseTimeFormat(DateTime date, String input) {
 		DateTime time = null;
 
 		for (int i = 0; i < FORMAT_SIZE; i++) {
@@ -979,7 +986,7 @@ public class TimeParser {
 		}
 	}
 
-	public static ArrayList<DateTime> searchTime(ArrayList<DateTime> date, String input) {
+	public ArrayList<DateTime> searchTime(ArrayList<DateTime> date, String input) {
 		if (isValidFormat(input)) {
 			DateTime start = date.get(0);
 			DateTime end = date.get(1);
