--- a/collated/A0133915H.md
+++ b/collated/A0133915H.md
@@ -6,6 +6,7 @@ public class MainApp extends Application {
 
 	private static ObservableList<Task> taskList;
 	private static ObservableList<String> todayTaskList;
+	LogicClass lc = LogicClass.getInstance();
 
 	private static Logger logger = Logger.getLogger("MainApp");
 
@@ -13,7 +14,8 @@ public class MainApp extends Application {
 	}
 
 	public ObservableList<Task> getTaskData() {
-		ArrayList<Task> tasks = LogicClass.getTaskList();
+		
+		ArrayList<Task> tasks = lc.getTaskList();
 		for (int i = 0; i < tasks.size(); i++) {
 			System.out.println(tasks.get(i).getName());
 		}
@@ -24,49 +26,31 @@ public class MainApp extends Application {
 		return taskList;
 	}
 
-	public ObservableList<String> getTodayTasks() {
-		ArrayList<String> todayTasks = LogicClass.getTodayTasks();
-		todayTaskList = FXCollections.observableArrayList(todayTasks);
-		return todayTaskList;
-	}
+//	public ObservableList<String> getTodayTasks() {
+//		ArrayList<String> todayTasks = lc.getTodayTasks();
+//		todayTaskList = FXCollections.observableArrayList(todayTasks);
+//		return todayTaskList;
+//	}
 
 	@Override
 	public void start(Stage primaryStage) {
 		try {
-			
+
 			Button btn = new Button();
-	        btn.setText("Help");
-	        btn.setOnAction(new EventHandler<ActionEvent>() {
-	            @Override
-	            public void handle(ActionEvent event) {
-	                 
-			        Image image = new Image("Basic.PNG");
-			        ImageView imageView = new ImageView();
-			        imageView.setImage(image);
-	                imageView.setPreserveRatio(true);
-	                
-	                ScrollPane secondaryLayout = new ScrollPane();
-	                secondaryLayout.setContent(imageView);
-	                 
-	                Scene secondScene = new Scene(secondaryLayout, 750, 700);
-	                Stage secondStage = new Stage();
-	                secondStage.setTitle("Help");
-	                secondStage.setScene(secondScene);
-	                 
-	                //Set position of second window, related to primary window.
-	                secondStage.setX(primaryStage.getX() + 250);
-	                secondStage.setY(primaryStage.getY() + 100);
-	  
-	                secondStage.show();
-	            }
-	        });
-	        
-	        BorderPane rootLayout = new BorderPane();
-	        
-	        rootLayout.setTop(btn);
+			btn.setText("Help");
+			btn.setOnAction(new EventHandler<ActionEvent>() {
+				@Override
+				public void handle(ActionEvent event) {
+					indexHelp();
+				}
+			});
+
+			BorderPane rootLayout = new BorderPane();
+
+			rootLayout.setTop(btn);
 			this.primaryStage = primaryStage;
 			this.primaryStage.setTitle("TaskBomber");
-			
+
 			FXMLLoader loader = new FXMLLoader();
 			loader.setLocation(MainApp.class.getResource("TaskView.fxml"));
 			AnchorPane taskBomberOverview = (AnchorPane) loader.load();
@@ -77,39 +61,160 @@ public class MainApp extends Application {
 
 			controller.setMainApp(this);
 			logger.log(Level.INFO, "RootLayout is initiated.");
-			
+
 			Scene scene = new Scene(rootLayout);
 			primaryStage.setScene(scene);
 			primaryStage.show();
-			
+
 			logger.log(Level.INFO, "The view is generated.");
 
 		} catch (Exception e) {
 			logger.log(Level.SEVERE, null, e);
 		}
 	}
-	
-	public void basicHelp(){
-		Image image = new Image("Basic.PNG");
-        ImageView imageView = new ImageView();
-        imageView.setImage(image);
-        imageView.setPreserveRatio(true);
-        
-        ScrollPane secondaryLayout = new ScrollPane();
-        secondaryLayout.setContent(imageView);
-         
-        Scene secondScene = new Scene(secondaryLayout, 750, 700);
-        Stage secondStage = new Stage();
-        secondStage.setTitle("Help");
-        secondStage.setScene(secondScene);
-         
-        //Set position of second window, related to primary window.
-        secondStage.setX(primaryStage.getX() + 250);
-        secondStage.setY(primaryStage.getY() + 100);
 
-        secondStage.show();
+	public void indexHelp() {
+		Image image = new Image("gui/help/Index.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane secondaryLayout = new ScrollPane();
+		secondaryLayout.setContent(imageView);
+
+		Scene secondScene = new Scene(secondaryLayout, 800, 450);
+		Stage secondStage = new Stage();
+		secondStage.setTitle("Help");
+		secondStage.setScene(secondScene);
+
+		imageView.fitWidthProperty().bind(secondStage.widthProperty());
+		// Set position of second window, related to primary window.
+		secondStage.setX(primaryStage.getX() + 200);
+		secondStage.setY(primaryStage.getY() + 150);
+
+		secondStage.show();
+	}
+
+	public void sos() {
+		Image image = new Image("gui/help/SOS.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane thirdLayout = new ScrollPane();
+		thirdLayout.setContent(imageView);
+
+		Scene thirdScene = new Scene(thirdLayout, 800, 450);
+		Stage thirdStage = new Stage();
+		thirdStage.setTitle("SOS");
+		thirdStage.setScene(thirdScene);
+
+		imageView.fitWidthProperty().bind(thirdStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		thirdStage.setX(primaryStage.getX() + 200);
+		thirdStage.setY(primaryStage.getY() + 150);
+
+		thirdStage.show();
+	}
+
+	public void basic() {
+		Image image = new Image("gui/help/Basic.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane fourthLayout = new ScrollPane();
+		fourthLayout.setContent(imageView);
+
+		Scene fourthScene = new Scene(fourthLayout, 800, 450);
+		Stage fourthStage = new Stage();
+		fourthStage.setTitle("Help Basic");
+		fourthStage.setScene(fourthScene);
+
+		imageView.fitWidthProperty().bind(fourthStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		fourthStage.setX(primaryStage.getX() + 200);
+		fourthStage.setY(primaryStage.getY() + 150);
+
+		fourthStage.show();
 	}
 	
+	public void advance() {
+		Image image = new Image("gui/help/Advance.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane fifthLayout = new ScrollPane();
+		fifthLayout.setContent(imageView);
+
+		Scene fifthScene = new Scene(fifthLayout, 800, 450);
+		Stage fifthStage = new Stage();
+		fifthStage.setTitle("Help Advance");
+		fifthStage.setScene(fifthScene);
+
+		imageView.fitWidthProperty().bind(fifthStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		fifthStage.setX(primaryStage.getX() + 200);
+		fifthStage.setY(primaryStage.getY() + 150);
+
+		fifthStage.show();
+	}
+
+	public void shortForm() {
+		Image image = new Image("gui/help/Shortcut.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane sixthLayout = new ScrollPane();
+		sixthLayout.setContent(imageView);
+
+		Scene sixthScene = new Scene(sixthLayout, 900, 600);
+		Stage sixthStage = new Stage();
+		sixthStage.setTitle("Shortcuts");
+		sixthStage.setScene(sixthScene);
+
+		imageView.fitWidthProperty().bind(sixthStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		sixthStage.setX(primaryStage.getX() + 200);
+		sixthStage.setY(primaryStage.getY() + 100);
+
+		sixthStage.show();
+	}
+	
+	public void credit() {
+		Image image = new Image("gui/help/Credit.TIF");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane seventhLayout = new ScrollPane();
+		seventhLayout.setContent(imageView);
+
+		Scene seventhScene = new Scene(seventhLayout, 900, 520);
+		Stage seventhStage = new Stage();
+		seventhStage.setTitle("Shortcuts");
+		seventhStage.setScene(seventhScene);
+
+		imageView.fitWidthProperty().bind(seventhStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		seventhStage.setX(primaryStage.getX() + 200);
+		seventhStage.setY(primaryStage.getY() + 150);
+
+		seventhStage.show();
+	}
+
+    public void exit() {
+        Stage stage = getPrimaryStage();
+        stage.close();
+    }
+    
 	/**
 	 * Returns the main stage.
 	 * 
@@ -132,6 +237,8 @@ public class TaskViewController {
 
 	private final KeyCombination crtlZ = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
 	private final KeyCombination crtlY = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
+	private static Stack<String> pastCommands;
+	private static Stack<String> poppedCommands;
 
 	@FXML
 	private TextField txtCommandInput;
@@ -182,7 +289,6 @@ public class TaskViewController {
 
 	public void enterCommand(KeyEvent event) {
 		if (event.getCode() == KeyCode.ENTER) {
-			System.out.println("I am Here");
 			enterKeyEvent();
 		} else if (event.getCode() == KeyCode.UP) {
 			upKeyEvent();
@@ -195,7 +301,6 @@ public class TaskViewController {
 		}
 	}
 
-
 	private void controlYKeyEvent() {
 		execute("redo");
 	}
@@ -205,37 +310,69 @@ public class TaskViewController {
 	}
 
 	private void downKeyEvent() {
-		// TODO Auto-generated method stub
-
+		if (poppedCommands.isEmpty()) {
+			txtCommandInput.clear();
+		} else {
+			txtCommandInput.clear();
+			String pastCommand = poppedCommands.pop();
+			pastCommands.push(pastCommand);
+			txtCommandInput.setText(pastCommand);
+		}
 	}
 
 	private void upKeyEvent() {
-		// TODO Auto-generated method stub
-
+		if (pastCommands.isEmpty()) {
+			txtCommandInput.clear();
+		} else {
+			txtCommandInput.clear();
+			String pastCommand = pastCommands.pop();
+			poppedCommands.push(pastCommand);
+			txtCommandInput.setText(pastCommand);
+		}
 	}
 
 	private void enterKeyEvent() {
 		if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
 			taskTableView.setItems(mainApp.getTaskData());
 		} else {
-			if (txtCommandInput.getText().equalsIgnoreCase("help")) {
-				mainApp.basicHelp();
+			pastCommands.push(txtCommandInput.getText());
+			if (txtCommandInput.getText().equalsIgnoreCase("exit")) {
+				mainApp.exit();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("help")) {
+				mainApp.indexHelp();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("sos")) {
+				mainApp.sos();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("basic")
+					|| txtCommandInput.getText().equalsIgnoreCase("`hb")) {
+				mainApp.basic();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("advance")
+					|| txtCommandInput.getText().equalsIgnoreCase("`ha")) {
+				mainApp.advance();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("shortcut")
+					|| txtCommandInput.getText().equalsIgnoreCase("shortcuts")
+					|| txtCommandInput.getText().equalsIgnoreCase("shortform")
+					|| txtCommandInput.getText().equalsIgnoreCase("shortforms")
+					|| txtCommandInput.getText().equalsIgnoreCase("`sc")) {
+				mainApp.shortForm();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("credit")
+					|| txtCommandInput.getText().equalsIgnoreCase("`cd")) {
+				mainApp.credit();
 			} else {
 				String input = txtCommandInput.getText().trim();
 				logger.log(Level.INFO, "Here comes a command.");
 				execute(input);
 			}
+			txtCommandInput.clear();
 		}
 	}
-	
-	private void execute(String input){
+
+	private void execute(String input) {
 		CommandPackage cmdPack = cmdParser.getCommandPackage(input);
 		logger.log(Level.INFO, "CommandParser parses the command.");
 		assert (cmdPack != null);
 		logic.executeCommand(cmdPack);
 		taskTableView.setItems(mainApp.getTaskData());
 		logger.log(Level.INFO, "Update the table view.");
-		txtCommandInput.clear();
 	}
 
 	/**
@@ -245,7 +382,6 @@ public class TaskViewController {
 	 */
 
 	public void setMainApp(MainApp mainApp) {
-		System.out.println("set Main app.");
 		this.mainApp = mainApp;
 		logger.log(Level.INFO, "Set MainApp.");
 		// Add observable list data to the table
