--- a/collated/A0122061B.md
+++ b/collated/A0122061B.md
@@ -37,17 +37,17 @@ public class CommandPackage {
 	updateSequence = new ArrayList<String>();
     }
 
-    protected String setCommand(String cmd) {
+    public String setCommand(String cmd) {
 	command = cmd;
 	return command;
     }
 
-    protected String setPhrase(String text) {
+    public String setPhrase(String text) {
 	phrase = text;
 	return phrase;
     }
 
-    protected DatePackage setDates(ArrayList<DateTime> time, String condition) {
+    public DatePackage setDates(ArrayList<DateTime> time, String condition) {
 	if (condition.equalsIgnoreCase("start")) {
 	    dates.setDate(time.get(0), null);
 	} else {
@@ -57,7 +57,7 @@ public class CommandPackage {
 
     }
 
-    protected DatePackage setDates(ArrayList<DateTime> time) {
+    public DatePackage setDates(ArrayList<DateTime> time) {
 	if (time.get(0).compareTo(time.get(1)) < 0) {
 	    dates.setDate(time.get(0), time.get(1));
 	} else {
@@ -66,12 +66,12 @@ public class CommandPackage {
 	return dates;
     }
 
-    protected String setPriority(String priority) {
+    public String setPriority(String priority) {
 	this.priority = priority;
 	return priority;
     }
 
-    protected ArrayList<String> addUpdateSequence(String sequence) {
+    public ArrayList<String> addUpdateSequence(String sequence) {
 	updateSequence.add(sequence);
 	return updateSequence;
 
