--- a/collated/A0133915H.md
+++ b/collated/A0133915H.md
@@ -5,7 +5,6 @@ public class MainApp extends Application {
 	private Stage primaryStage;
 
 	private static ObservableList<Task> taskList;
-	private static ObservableList<String> todayTaskList;
 	LogicClass lc = LogicClass.getInstance();
 
 	private static Logger logger = Logger.getLogger("MainApp");
@@ -25,12 +24,6 @@ public class MainApp extends Application {
 		taskList = FXCollections.observableArrayList(tasks);
 		return taskList;
 	}
-
-//	public ObservableList<String> getTodayTasks() {
-//		ArrayList<String> todayTasks = lc.getTodayTasks();
-//		todayTaskList = FXCollections.observableArrayList(todayTasks);
-//		return todayTaskList;
-//	}
 
 	@Override
 	public void start(Stage primaryStage) {
@@ -74,7 +67,7 @@ public class MainApp extends Application {
 	}
 
 	public void indexHelp() {
-		Image image = new Image("gui/help/Index.TIF");
+		Image image = new Image("gui/help/Index.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -96,7 +89,7 @@ public class MainApp extends Application {
 	}
 
 	public void sos() {
-		Image image = new Image("gui/help/SOS.TIF");
+		Image image = new Image("gui/help/SOS.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -119,7 +112,7 @@ public class MainApp extends Application {
 	}
 
 	public void basic() {
-		Image image = new Image("gui/help/Basic.TIF");
+		Image image = new Image("gui/help/Basic.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -142,7 +135,7 @@ public class MainApp extends Application {
 	}
 	
 	public void advance() {
-		Image image = new Image("gui/help/Advance.TIF");
+		Image image = new Image("gui/help/Advance.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -165,7 +158,7 @@ public class MainApp extends Application {
 	}
 
 	public void shortForm() {
-		Image image = new Image("gui/help/Shortcut.TIF");
+		Image image = new Image("gui/help/Shortcut.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -188,7 +181,7 @@ public class MainApp extends Application {
 	}
 	
 	public void credit() {
-		Image image = new Image("gui/help/Credit.TIF");
+		Image image = new Image("gui/help/Credits.PNG");
 		ImageView imageView = new ImageView();
 		imageView.setImage(image);
 		imageView.setPreserveRatio(true);
@@ -237,8 +230,8 @@ public class TaskViewController {
 
 	private final KeyCombination crtlZ = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
 	private final KeyCombination crtlY = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
-	private static Stack<String> pastCommands;
-	private static Stack<String> poppedCommands;
+	private static Stack<String> pastCommands = new Stack<String>();
+	private static Stack<String> poppedCommands = new Stack<String>();
 
 	@FXML
 	private TextField txtCommandInput;
@@ -255,11 +248,6 @@ public class TaskViewController {
 	private TableColumn<Task, String> endTimeColumn;
 	@FXML
 	private TableColumn<Task, String> priority;
-
-	@FXML
-	private ListView<String> todayTasksView;
-
-	ArrayList<String> todayTasks = new ArrayList<String>();
 
 	// Reference to the main application.
 	private MainApp mainApp;
@@ -335,32 +323,33 @@ public class TaskViewController {
 		if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
 			taskTableView.setItems(mainApp.getTaskData());
 		} else {
-			pastCommands.push(txtCommandInput.getText());
-			if (txtCommandInput.getText().equalsIgnoreCase("exit")) {
+			String input = txtCommandInput.getText();
+			pastCommands.push(input);
+			if (input.equalsIgnoreCase("exit")) {
 				mainApp.exit();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("help")) {
+			} else if (input.equalsIgnoreCase("help")) {
 				mainApp.indexHelp();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("sos")) {
+			} else if (input.equalsIgnoreCase("sos")) {
 				mainApp.sos();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("basic")
-					|| txtCommandInput.getText().equalsIgnoreCase("`hb")) {
+			} else if (input.equalsIgnoreCase("basic")
+					|| input.equalsIgnoreCase("`hb")) {
 				mainApp.basic();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("advance")
-					|| txtCommandInput.getText().equalsIgnoreCase("`ha")) {
+			} else if (input.equalsIgnoreCase("advance")
+					|| input.equalsIgnoreCase("`ha")) {
 				mainApp.advance();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("shortcut")
-					|| txtCommandInput.getText().equalsIgnoreCase("shortcuts")
-					|| txtCommandInput.getText().equalsIgnoreCase("shortform")
-					|| txtCommandInput.getText().equalsIgnoreCase("shortforms")
-					|| txtCommandInput.getText().equalsIgnoreCase("`sc")) {
+			} else if (input.equalsIgnoreCase("shortcut")
+					|| input.equalsIgnoreCase("shortcuts")
+					|| input.equalsIgnoreCase("shortform")
+					|| input.equalsIgnoreCase("shortforms")
+					|| input.equalsIgnoreCase("`sc")) {
 				mainApp.shortForm();
-			} else if (txtCommandInput.getText().equalsIgnoreCase("credit")
-					|| txtCommandInput.getText().equalsIgnoreCase("`cd")) {
+			} else if (input.equalsIgnoreCase("credit")
+					|| input.equalsIgnoreCase("`cd")) {
 				mainApp.credit();
 			} else {
-				String input = txtCommandInput.getText().trim();
+				String inputCommand = txtCommandInput.getText().trim();
 				logger.log(Level.INFO, "Here comes a command.");
-				execute(input);
+				execute(inputCommand);
 			}
 			txtCommandInput.clear();
 		}
@@ -370,7 +359,11 @@ public class TaskViewController {
 		CommandPackage cmdPack = cmdParser.getCommandPackage(input);
 		logger.log(Level.INFO, "CommandParser parses the command.");
 		assert (cmdPack != null);
-		logic.executeCommand(cmdPack);
+		try{
+			String feedback = logic.executeCommand(cmdPack);
+		}catch(Exception e){
+			
+		}
 		taskTableView.setItems(mainApp.getTaskData());
 		logger.log(Level.INFO, "Update the table view.");
 	}
