--- a/collated/A0133949U.md
+++ b/collated/A0133949U.md
@@ -109,24 +109,33 @@ public class DeleteCommand extends Command{
 	@Override
 	public String execute() {
 		int index=0;
+		boolean found = false;
 		ArrayList<Task> taskList = mgr.getTaskList();
 		Task t;
 		if (isInteger(deleteInfo, 10)) { // delete by index
 			index = Integer.parseInt(deleteInfo)-1;
-			if(index>=taskList.size() || index<0){
-				return "invalid index";
+			if(index<taskList.size()  && index>=0){
+				found =true;
+				mgr.delete(index);		
+				return "task deleted";
 			}
-		} else {// delete by name
-			for (int i = 0; i < taskList.size(); i++) {
-				t = taskList.get(i);
-				if (t.getName().equals(deleteInfo)) {
-					index=i;
-					break;
-				}
+			
+		}  
+		// delete by name
+		for (int i = 0; i < taskList.size(); i++) {
+			t = taskList.get(i);
+			if (t.getName().equals(deleteInfo)) {
+				index=i;
+				found = true;
+				break;
 			}
 		}
-		mgr.delete(index);
 		
+		if(found == false){
+			return "invalid command";
+		}
+		
+		mgr.delete(index);		
 		return "task deleted";
 	}
 	
@@ -269,8 +278,7 @@ public class SearchCommand extends Command{
 
 	@Override
 	public String execute() {
-		
-		
+
 		
 		Task task = new Task(commandInfo.getPhrase());
 		if (commandInfo.startingTime() != null) {
@@ -290,6 +298,43 @@ public class SearchCommand extends Command{
         mgr.search(task);
 		
 		return "search completed";
+	}
+
+}
+```
+###### src\logic\command\SetCommand.java
+``` java
+package logic.command;
+
+import java.util.ArrayList;
+
+import logic.Command;
+import logic.CommandType;
+import logic.Manager;
+import logic.Task;
+
+public class SetCommand extends Command{
+
+	CommandType ct;
+	Manager mgr;
+	String pathInfo;
+
+	public SetCommand(CommandType ct,Manager manager,String pathInfo) {
+		super(ct);
+		this.ct= ct;
+		this.mgr=manager;	
+		this.pathInfo = pathInfo;
+		
+	}
+
+	@Override
+	public String execute() {
+		if(mgr.setPath(pathInfo)){
+			return "path set to"+ pathInfo;
+		}else{
+			return "invalid path";
+			
+		}
 	}
 
 }
@@ -415,7 +460,8 @@ public class UpdateCommand extends Command{
 						task.setTaskName(update.get(3));
 					}
 
-				} else if (update.get(2).equals("#")) {
+				} else if (update.get(2).equals("#") || 
+						update.get(2).equalsIgnoreCase("priority")) {
 					task.setPriority(update.get(3));
 				} else if (update.get(2).equalsIgnoreCase("startTime")) {
 					// System.out.println("parse date" +
@@ -529,7 +575,7 @@ public class LogicClass implements LogicInterface{
 		return mgr.getTaskList();
 	}
 	
-	public void executeCommand(CommandPackage commandPackage) {
+	public String executeCommand(CommandPackage commandPackage) {
 		isSearchOp = false;
 //		if(commandPackage==null){
 //			System.out.println("cp is null");
@@ -573,11 +619,12 @@ public class LogicClass implements LogicInterface{
 		case EXIT:
 			System.exit(0);
 		default:
-			invalid();
+			return invalid();
 
 		}
 		
 		String returnMsg = cmd.execute();
+		return returnMsg;
 		
 	}
 
@@ -653,125 +700,127 @@ package logic;
 
 import java.util.ArrayList;
 import java.util.Collections;
-
-import org.joda.time.DateTime;
-
-import parser.CommandPackage;
 import storage.Storage;
 
 public class Manager {
-	ArrayList<Task> taskList;
-	UndoRedoOp undoRedo = null;
-	TimeLine timeline;
-	PriorityTaskList ptl;
-	Searcher seacher;
+    ArrayList<Task> taskList;
+    UndoRedoOp undoRedo = null;
+    TimeLine timeline;
+    PriorityTaskList ptl;
+    Searcher seacher;
 	ArrayList<Task> searchTaskList;
 	static Manager manager = null;
 	ArrayList<Task> archivedList;
 	Storage storage;
-
-	// constructor
-	public Manager() {
-		taskList = new ArrayList<Task>();
-		timeline = TimeLine.getInstance();
-		ptl = ptl.getInstance();
-		seacher = Searcher.getInstance();
-		searchTaskList = new ArrayList<Task>();
-		archivedList = new ArrayList<Task>();
-		storage = Storage.getInstance();
-		undoRedo = new UndoRedoOp(taskList);
-	}
-
-	public static Manager getInstance() {
-		if (manager == null) {
+	
+	//constructor
+    public Manager(){
+    	taskList = new ArrayList<Task>();
+    	timeline = TimeLine.getInstance();
+    	ptl = ptl.getInstance();
+    	seacher = Searcher.getInstance();
+    	searchTaskList = new ArrayList<Task>();
+    	archivedList = new ArrayList<Task>();
+    	storage = Storage.getInstance();
+    	undoRedo = new UndoRedoOp(taskList);
+    }
+    
+    public static Manager getInstance(){
+		if(manager == null){
 			manager = new Manager();
 		}
 		return manager;
 	}
-
-	// accessor
-
-	public ArrayList<Task> getTaskList() {
-		return taskList;
-
-	}
-
-	public ArrayList<Task> getSearchList() {
-		return searchTaskList;
-
-	}
-
-	public ArrayList<Task> getArichivedList() {
-		return archivedList;
-
-	}
-
-	// functions
-	public Task addToTaskList(Task task) {
+    
+    //accessor
+    
+    public ArrayList<Task> getTaskList(){
+    	return taskList;
+    	
+    }
+    
+    public ArrayList<Task> getSearchList(){
+    	return searchTaskList;
+    	
+    }
+    
+    public ArrayList<Task> getArichivedList(){
+    	return archivedList;
+    	
+    }
+    
+    //functions
+    public Task addToTaskList(Task task) {   	
 		taskList.add(task);
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
 		ptl.addToPL(task);
 		timeline.addToTL(task);
-		storage.write(taskList, archivedList);
-
+		storage.write(taskList,archivedList);
+		
 		return task;
 
 	}
-
-	public Task delete(int index) {
-		Task t = taskList.remove(index);
+    
+    public Task delete(int index) { 
+    	Task t = taskList.remove(index);    	
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		ptl.deleteFromPL(t);
-		;
+		ptl.deleteFromPL(t);;
 		timeline.deleteFromTL(t);
-		storage.write(taskList, archivedList);
+		storage.write(taskList,archivedList);
 		return t;
 
 	}
-
-	public void clear() {
-		taskList.clear();
+    
+    public void clear(){
+    	taskList.clear();
 		ptl.clear();
 		timeline.clear();
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		storage.write(taskList, archivedList);
+		storage.write(taskList,archivedList);
 
-	}
-
-	public void sort(String type) {
-		switch (type) {
-		case "name":
-			Collections.sort(taskList);
-			break;
-		case "time":
-			taskList = new ArrayList<Task>(timeline.getStarttimeLine());
+    }
+    
+    public void sort(String type) {
+    	switch(type){
+    	case "name":
+    		Collections.sort(taskList);
+    		break;
+    	case "time":
+    		taskList = new ArrayList<Task>(timeline.getStarttimeLine());
 			taskList.addAll(timeline.getEndtimeLine());
 			taskList.addAll(timeline.getFloattimeLine());
 			break;
-		case "priority":
-			taskList = new ArrayList<Task>(ptl.getP1());
+    	case "priority":
+    		taskList = new ArrayList<Task>(ptl.getP1());
 			taskList.addAll(ptl.getP2());
 			taskList.addAll(ptl.getP3());
 			taskList.addAll(ptl.getP4());
 			break;
-		}
+    	case "#":
+    		taskList = new ArrayList<Task>(ptl.getP1());
+			taskList.addAll(ptl.getP2());
+			taskList.addAll(ptl.getP3());
+			taskList.addAll(ptl.getP4());
+			break;
+    	}
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		storage.write(taskList, archivedList);
+		storage.write(taskList,archivedList);
 
 	}
-
-	public void search(Task task) {
-		System.out.println("name" + task.getName());
-		if (task.getName().equals("done")) {
-			searchTaskList = new ArrayList<Task>(archivedList);
-		} else {
-			searchTaskList = new ArrayList<Task>(seacher.search(task));
-		}
-
-	}
-
-	public void redo() {
-		taskList = undoRedo.redo();
+    
+    public void search(Task task){
+    	System.out.println("name"+task.getName());
+    	if(task.getName().equals("done")){
+    		searchTaskList = new ArrayList<Task>(archivedList);
+    	}else{
+    		searchTaskList = new ArrayList<Task>(seacher.search(task));
+    	}
+    	
+  	
+    }
+    
+    public void redo(){
+    	taskList = undoRedo.redo();
 		ptl.clear();
 		timeline.clear();
 		for (int i = 0; i < taskList.size(); i++) {
@@ -779,61 +828,69 @@ public class Manager {
 			ptl.addToPL(task);
 			timeline.addToTL(task);
 		}
-		storage.write(taskList, archivedList);
-
-	}
-
-	public void undo() {
-		taskList = new ArrayList<Task>(undoRedo.undo());
+		storage.write(taskList,archivedList);
+  	
+    }
+    
+    public void undo(){
+    	taskList = new ArrayList<Task>(undoRedo.undo());
 		ptl.clear();
 		timeline.clear();
 		setptlAndTimeLine(taskList);
-		storage.write(taskList, archivedList);
-	}
-
-	public Task mark(int index) {
-		if (!taskList.isEmpty()) {
-			Task t = taskList.remove(index);
-			archivedList.add(t);
-			System.out.println("al" + archivedList.toString());
-			undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-			ptl.deleteFromPL(t);
-			;
-			timeline.deleteFromTL(t);
-			storage.write(taskList, archivedList);
-			return t;
+		storage.write(taskList,archivedList);
+    }
+    
+    public boolean setPath(String pathInfo){
+    	if(storage.setPath(pathInfo)){
+			return true;	
+		}else{
+			return false;
 		}
-		return null;
-
-	}
-
-	public void setTaskList(ArrayList<Task> tl) {
-		taskList = tl;
-
+    }
+    
+    public Task mark(int index) { 
+    	Task t = taskList.remove(index); 
+    	archivedList.add(t);
+    	System.out.println("al"+archivedList.toString());
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		// System.out.println(taskList.size());
-		setptlAndTimeLine(taskList);
-
-		storage.write(taskList, archivedList);
-
+		ptl.deleteFromPL(t);;
+		timeline.deleteFromTL(t);
+		storage.write(taskList,archivedList);
+		return t;
+		
 	}
+    
+    
 
-	public void setArchivedList(ArrayList<Task> al) {
-		archivedList = al;
-		undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
-		storage.write(taskList, archivedList);
-
-	}
-
-	public void setptlAndTimeLine(ArrayList<Task> tl) {
-		for (int i = 0; i < tl.size(); i++) {
+    
+    public void setTaskList(ArrayList<Task> tl){
+    	taskList = tl;
+    	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	//System.out.println(taskList.size());
+    	setptlAndTimeLine(taskList);
+    	
+    	storage.write(taskList,archivedList);
+    	
+    }
+    
+    public void setArchivedList(ArrayList<Task> al){
+    	archivedList = al;
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList));
+    	storage.write(taskList,archivedList);
+    	
+    }
+    
+    public void setptlAndTimeLine(ArrayList<Task> tl){
+    	for (int i = 0; i < tl.size(); i++) {
 			Task task = tl.get(i);
 			ptl.addToPL(task);
 			timeline.addToTL(task);
 		}
-		storage.write(taskList, archivedList);
-
-	}
-
+    	storage.write(taskList,archivedList);
+    	
+    }
+    
+    
 }
 ```
