--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -120,6 +120,12 @@ public class Searcher {
 		return searcher;	
 	}
 	
+	/**
+	* This operation extracts the information and search for matching task
+	*
+	* @param a task structure which captures search information
+	* @return a list of tasks matching search query 
+	*/
 	public ArrayList<Task> search(Task target){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(target.getStartTime() != null){
@@ -141,8 +147,15 @@ public class Searcher {
 			}
 		}
 		return result;
-
 	}
+	
+	/**
+	* This operation search for keyword on the given sample
+	*
+	* @param a keyword for sample
+	* @param sample for searching on
+	* @return a list of tasks matching search query 
+	*/
 	public ArrayList<Task> searchKeyword(String key, ArrayList<Task> sample){
 		int i, j;
 		String[] keywords = key.split(" ");
@@ -162,6 +175,13 @@ public class Searcher {
 		return sampleCopy;		
 	}
 
+	/**
+	* This operation search for tasks with given priority
+	* this operation is for search query solely for priority
+	*
+	* @param priority value to search
+	* @return a list of tasks matching search query 
+	*/
 	public ArrayList<Task> searchPriority(int priority){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(priority == 1){
@@ -174,6 +194,14 @@ public class Searcher {
 		return result;
 	}
 	
+	/**
+	* This operation search for tasks with given priority on a given sample
+	* this operation is for compound search query
+	*
+	* @param priority value to search
+	* @param a sample to search on
+	* @return a list of tasks matching search query 
+	*/
 	public ArrayList<Task> searchPriorityFrom(int priority, ArrayList<Task> sample){
 		int i;
 		Task target;
@@ -187,6 +215,13 @@ public class Searcher {
 		return sample;		
 	}
 	
+	/**
+	* This operation search for tasks whose dates fall in given range
+	*
+	* @param start point of searching range
+	* @param end point of searching range
+	* @return a list of tasks matching search query 
+	*/
 	public ArrayList<Task> searchDate(DateTime start, DateTime end){
 		ArrayList<Task> result1 = new ArrayList<Task>(TimeLine.getInstance().getStarttimeLine());
 		ArrayList<Task> result2 = new ArrayList<Task>(TimeLine.getInstance().getEndtimeLine());
@@ -502,7 +537,7 @@ public class TimeSearchTest {
 		TimeLine.getInstance().clear();
 		TimeLine.getInstance().addToTL(c);
 		TimeLine.getInstance().addToTL(d);
-		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).get(0).getName());
+		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,2,1)).get(0).getName());
 	}
 	
 	public void test3() {
@@ -689,8 +724,9 @@ public class Storage {
 		boolean done = false;
 		ArrayList<Task> taskList = new ArrayList<Task>();
 		ArrayList<Task> doneList = new ArrayList<Task>();
-		while ((content = buff.readLine()) != null) {
-		    if(content.equals("done:")){
+		while ((content = buff.readLine()) != null && content.trim().length() != 0) {
+			System.out.println("content" + content);
+            if(content.equals("done:")){
 		    	done = true;
 		    	continue;
 		    }
@@ -728,7 +764,8 @@ public class Storage {
 	/**
 	* This operation open the file and start to write into it
 	*
-	* @param ongoing tasklist and 'done' tasklist.
+	* @param ongoing tasklist 
+	* @param 'done' tasklist.
 	*/
 	public void write(ArrayList<Task> taskList, ArrayList<Task> doneList) {
 		try {
@@ -751,7 +788,9 @@ public class Storage {
 	/**
 	* This operation open the file and start to write into it
 	*
-	* @param a list of tasks to be written and previous content
+	* @param a list of tasks to be written
+	* @param previous content which contains tasks has been read
+	* @return content containing tasks information to be written to local file
 	*/
 	private String writeTasks(ArrayList<Task> taskList, String content) {
 		Task taskToWrite;
